# target-boundary-ifeval

./: .gitattributes  .gitignore  ATTRIBUTION.md  CITATION.cff  DATA_CARD.md  LICENSE  MODEL_CARD.md  README.md  README.zh.md
boundary-if/: .dockerignore  .env.example  Dockerfile  docker-compose.gpu.yml  docker-compose.vllm.yml  docker-compose.yml  pyproject.toml
boundary-if/configs/: config.yaml
boundary-if/scripts/: analyze_truncated_clusters.py  audit_boundary_clusters.py  audit_checker_samples.py  audit_split_duplicates_clusters.py  batch_vllm_generate_under2048.py  benchmark_vllm_context.py  build_under2048_nontruncated_all.py  check_under2048_outputs.py  cluster_promptset_under_token_limit.py  filter_tokenized_by_prompt_length.py  generate_blog_final_assets.py  generate_final_figure_bundle.py  inspect_split_sample.py  plot_all_experiment_test_metrics.py  plot_all_experiment_test_metrics_line.py  plot_group_vs_strict_tokenizer_key_results.py  plot_learning_curve_metric_proportions.py  plot_m1_m3_learning_curve_comparison.py  plot_m1_m3_m4_comparison_selective.py  plot_m3_capacity_seed_sweep.py  plot_m3_initial_multiseed_learning_curve.py  plot_strict_atomic_tokenizer_multiseed_key_runs.py  plot_under2048_inference_report.py  run_m3_capacity_seed_sweep.py  run_m3_initial_multiseed_learning_curve.py  run_m4_initial_multiseed_learning_curve.py  run_strict_atomic_tokenizer_key_runs.sh  run_strict_atomic_tokenizer_multiseed_key_runs.py  run_vllm_cluster_length_sample.py  smoke_vllm_checker.py  summarize_checker_nontruncated.py  tokenize_promptset.py  (+9 more)
(+90 files in other folders)
