[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boundary-if"
version = "0.1.0"
description = "Boundary proxy models for instruction-following checker pass/fail prediction."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate>=0.33",
  "absl-py>=2.1",
  "datasets>=2.20",
  "hydra-core>=1.3",
  "immutabledict>=4.2",
  "langdetect>=1.0.9",
  "matplotlib>=3.8",
  "nltk>=3.9",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "pandas>=2.2",
  "pyarrow>=16",
  "pydantic>=2.7",
  "rich>=13.7",
  "scikit-learn>=1.5",
  "seaborn>=0.13",
  "tokenizers>=0.19",
  "torch>=2.3",
  "tqdm>=4.66",
  "transformers>=4.43",
  "wandb>=0.17",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
boundary-smoke = "boundary_if.cli.smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
